[package]
name = "graus-db"
version = "0.1.0"
authors = ["Ricardo Pallas Roman <rpallas92@gmail.com>"]
description = "A high-performance, thread-safe key-value embedded data store."
edition = "2018"

[dependencies]
crossbeam-skiplist = "0.1"
log = "0.4.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"

[[bench]]
name = "graus_db_single_thread"
harness = false