[package]
name = "graus-db"
version = "0.2.1"
authors = ["Ricardo Pallas Roman <rpallas92@gmail.com>"]
description = "A high-performance, thread-safe key-value embedded data store."
edition = "2021"
categories = ["algorithms", "asynchronous", "data-structures"]
homepage = "https://github.com/rpallas92/GrausDB"
keywords = ["database", "performance", "data-storage"]
license = "MIT/Apache-2.0"
repository = "https://github.com/rpallas92/GrausDB"
documentation = "https://github.com/rpallas92/GrausDB"
readme = "README.md"

[dependencies]
crossbeam-skiplist = "0.1"
log = "0.4.6"
thiserror = "1.0"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"

[[bench]]
name = "graus_db_single_thread"
harness = false

[workspace]
members = ["examples/zero_copy_struct_serde"]
