[package]
name = "grausdb_example"
version = "0.1.0"
edition = "2021"

[dependencies]
graus-db = { path = "../../" }
tempfile = "3"
musli-zerocopy = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[example]]
name = "zero_copy_vs_traditional_serde"
path = "src/zero_copy_vs_traditional_serde.rs"
